# pingpong

./: CMakeLists.txt  README.md  ball.cpp  ball.h  entity.cpp  entity.h  game.cpp  game.h  main.cpp  platformCommon.h  player.cpp  player.h  renderer.cpp  renderer.h  resources.rc  settings.txt  utils.cpp  utils.h
